# safety_project

./: README.md  pyproject.toml
data/: eval_results.csv  user_interactions.csv
scripts/: run_all.sh
src/safety_project/: __init__.py  config.py  create_chart.py  create_user_interactions_from_squad.py  eval_simple_1000.py
